# open_rsai_algos

./: .gitmodules  CMakeLists.txt  LICENSE  README.MD
hydro_green_detector/: CMakeLists.txt  detect_green.py  detect_hydro.py
hydro_green_train/: CMakeLists.txt  test_green.py  test_hydro.py  train_green.py  train_hydro.py
mrcnn_library/: CMakeLists.txt  README.MD  maskrcnn_predict.py
mrcnn_library/mrcnn/: config.py  model.py  model_temp.py  open_rsai_config.py  open_rsai_dataset.py  open_rsai_detect.py  open_rsai_train.py  utils.py
weights/: CMakeLists.txt
